better link matching if ending if braces or string/sentences end

fixup links like:
[ccc](https://cullmann.dev)
Visit 'https://cullmann.dev'
Visit "https://cullmann.dev"
The web site https://cullmann.dev.
<https://cullmann.dev>

BUG: 510574